Made final changes before testing 2

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/FirstPersonCPP/Blueprints/PersistentVariables.PersistentVariables_C
-GameDefaultMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+GameDefaultMap=/Game/FirstPersonCPP/Maps/Mainmenu.Mainmenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/FirstPersonCPP/Blueprints/Project_KnockdomeGameMode_BP.Project_KnockdomeGameMode_BP_C
 GlobalDefaultServerGameMode=None
