--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 +EditProfiles=(Name="Trigger",CustomResponses=((Channel=Projectile, Response=ECR_Ignore)))
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/FirstPersonCPP/Maps/FirstPersonExampleMap.FirstPersonExampleMap
+EditorStartupMap=/Game/FirstPersonCPP/Maps/KnockdomeMap_Linked.KnockdomeMap_Linked
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
