Finished sound settings
currently using temp sounds

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -39,3 +39,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/OculusHMD.OculusHMDRuntimeSettings]
 bAutoEnabled=False
 
+[/Script/Engine.AudioSettings]
+DefaultBaseSoundMix=/Game/FirstPerson/Audio/Project_Knockdome_Soundmix.Project_Knockdome_Soundmix
+DefaultSoundClassName=/Game/FirstPerson/Audio/soundMaster.soundMaster
+
