Added alot of hovered events, still a few missing

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -43,3 +43,6 @@ bAutoEnabled=False
 DefaultBaseSoundMix=/Game/FirstPerson/Audio/Project_Knockdome_Soundmix.Project_Knockdome_Soundmix
 DefaultSoundClassName=/Game/FirstPerson/Audio/soundMaster.soundMaster
 
+[/Script/Engine.UserInterfaceSettings]
+RenderFocusRule=Never
+
