Last changes before packaging

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -13,8 +13,8 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 Build=IfProjectHasCode
 BuildConfiguration=PPBC_Development
 BuildTarget=
-StagingDirectory=(Path="C:/Users/bigbu/OneDrive/Skrivebord/Project_Knockdome_testing3")
-FullRebuild=False
+StagingDirectory=(Path="../../../../../../Users/bigbu/OneDrive/Skrivebord/Group15_2PILP23_Packaged_Game")
+FullRebuild=True
 ForDistribution=False
 IncludeDebugFiles=False
 BlueprintNativizationMethod=Disabled
